--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pynput>=1.7.6",
     "pyautogui>=0.9.54",
     "pyqt6>=6.9.1",
+    "pyinstaller>=6.14.1",
 ]
 
 [tool.setuptools]
