截图工具 3.0最终版
添加完整的截图，具有检测圆形，调整圆心的功能

--- a/config.json
+++ b/config.json
@@ -7,17 +7,60 @@
       160
     ],
     "custom_region": [
-      603,
-      169,
-      1183,
-      627
+      1798,
+      97,
+      1913,
+      177
     ],
-    "save_directory": "E:/JB/截图",
+    "save_directory": "F:/测试",
     "continuous_interval": 1.5,
     "auto_reset_counter": true
   },
+  "circle_detection": {
+    "enabled": true,
+    "hough_params": {
+      "dp": 1.0,
+      "min_dist": 50,
+      "param1": 50,
+      "param2": 50,
+      "min_radius": 10,
+      "max_radius": 400
+    },
+    "custom_circle": {
+      "enabled": true,
+      "center_x": 1873,
+      "center_y": 131,
+      "radius": 19
+    },
+    "preprocessing": {
+      "blur_kernel_size": 5,
+      "median_blur_size": 5,
+      "use_clahe": true,
+      "clahe_clip_limit": 2.0,
+      "clahe_tile_grid_size": [
+        8,
+        8
+      ]
+    },
+    "filtering": {
+      "min_confidence": 0.3,
+      "max_circles": 10,
+      "overlap_threshold": 0.7
+    },
+    "capture": {
+      "save_individual": true,
+      "save_combined": false,
+      "transparent_background": true,
+      "padding": 10,
+      "anti_alias": true
+    },
+    "save_paths": {
+      "circle_images": "screenshots/circles",
+      "detection_data": "screenshots/circle_data"
+    }
+  },
   "hotkeys": {
-    "single_capture": "ctrl+a",
+    "single_capture": "ctrl+shift+q",
     "start_continuous": "ctrl+shift+c",
     "stop_continuous": "ctrl+shift+x"
   },
