--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pyinstaller>=6.14.1",
     "numpy>=2.3.1",
     "opencv-python>=4.8.0",
+    "psutil>=7.0.0",
 ]
 
 [tool.setuptools]
